Changelog
=========

HEAD
~~~~

- Maintain symbol mappings for joined expressions. [malthe]

1.0b7 (released 15/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed interpolation edge where a right curly brace not part of an
  interpolation expression would cancel a succeeding
  interpolation. [malthe]

- Pass `target_language` when using macros. [malthe]

1.0b6 (released 13/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- When validating inserted content (in debug-mode), make sure we wrap
  content as a proper HTML document, including HTML entity
  definitions. [malthe]

- If an element does not belong to a known namespace, assume it's the
  default namespace. This change is relevant after the introduction of
  fallback elements. [malthe]

- XML declarations should be printed with or without a doctype
  element, and only if the template includes it. [malthe]

1.0b5 (released 12/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Encode code annotations if encoding is required. [malthe]

- Added filename to XML syntax error exception message. [malthe]

- Fixed bug where a template would be wrapped with namespace
  definitions even if an XML header is present. [malthe]

- Added support for fallback element. [malthe]

- Enabled error handler for macro renderer. [malthe]

- Added error handler which adds debugging information to the
  exception object's string output (in debug-mode only). [malthe]

1.0b4 (released 28/10/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed translation issues (see recently added tests). [malthe]

- Refactored string coercion. [malthe]

1.0b3 (released 13/10/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed issue with parsing expression containing curly
  braces. [malthe]

- Added support for unscoped variable assignment. [malthe]

1.0b2 (released 11/10/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Added support for translating dynamic body text (used in
  interpolation expressions). [malthe]

- Added support for macros prebound to keyword arguments. [malthe]

1.0b1 (released 2/10/2008)